--- a/src/components/workouts/week-agenda-rows.module.scss
+++ b/src/components/workouts/week-agenda-rows.module.scss
@@ -1,7 +1,9 @@
 .agenda {
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
+  scrollbar-width: none;
+  &::-webkit-scrollbar { display: none; }
 }
 
 .row {
